# auth_rs

./: .env  .gitignore  Cargo.toml  README.md  env_example
config/: settings.toml
src/: main.rs
src/db/: mongodb.rs
src/error/: mod.rs  msg.rs
src/handlers/: auth.rs  auth_handler.rs  user.rs  user_handler.rs
src/models/: mod.rs  user.rs  user_model.rs
src/router/: auth_router.rs  mod.rs  user_router.rs
src/service/: jwt.rs  mod.rs
src/service/header/: mod.rs
src/service/middleware/: auth.rs  auth_middleware.rs
src/settings/: mod.rs
