[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
env_logger = "0.10"
log = "0.4"
jsonwebtoken = "8"
validator = "0.16"
validator_derive = "0.16"
config = "0.13"
dotenv = "0.15"
mongodb = "2"