[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4"}
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
env_logger = "0.10"
log = "0.4"
jsonwebtoken = "8"
validator = { version = "0.16", features = ["derive"] }
validator_derive = "0.16"
config = "0.13"
dotenv = "0.15"
mongodb = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
derive_more = "0.99.0"
thiserror = "1"
lazy_static = "1"